# provena-python-client

./: .buildinfo  .env.example  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README-dif.md  README.html  README.md  changelog.html  contributing.html  dev-requirements.txt  example-client-workflow.html  generate_open_api_endpoint_dump.py  genindex.html  home.html  index.html  mypy.ini  objects.inv  provenance-visualisation.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  tokens.json
.github/: pull_request_template.md  semantic.yml
.github/actions/cd/: action.yml
.github/actions/ci/: action.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  on_pull_request.yml  on_push_main.yml  test_ci_only_on_branch.yml
_modules/: index.html
_modules/provenaclient/auth/: helpers.html  implementations.html  manager.html
_modules/provenaclient/clients/: auth_client.html  client_helpers.html  datastore_client.html  id_service_client.html  job_client.html  prov_client.html  registry_client.html  search_client.html
_modules/provenaclient/models/: datastore.html  general.html
_modules/provenaclient/modules/: auth.html  datastore.html  id_service.html  job_service.html  link.html  module_helpers.html  prov.html  provena_client.html  registry.html  search.html
_modules/provenaclient/modules/submodules/: datastore_io_submodule.html
_modules/provenaclient/utils/: async_job_helpers.html  config.html  exceptions.html  helpers.html  http_client.html  registry_endpoints.html
_sources/: example-client-workflow.ipynb.txt  index.md.txt  provenance-visualisation.ipynb.txt  quickstart.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/provenaclient/: index.rst.txt
_sources/autoapi/provenaclient/auth/: index.rst.txt
autoapi/: index.html
autoapi/provenaclient/: index.html
autoapi/provenaclient/auth/: index.html
autoapi/provenaclient/clients/: index.html
autoapi/provenaclient/models/: index.html
autoapi/provenaclient/modules/: index.html
autoapi/provenaclient/utils/: index.html
docs/: Makefile  README.md  conf.py  example-client-workflow.ipynb  example.ipynb  home.md  index.md  make.bat  make.sh  nb-requirements.txt
scripts/: diagnose_lineage_graph.py
src/: README.md
src/provenaclient/: __init__.py  main.py  provena_client.py
src/provenaclient/auth/: __init__.py  auth.py  auth_helpers.py  auth_manager.py  helpers.py  implementations.py  manager.py  test.py
src/provenaclient/clients/: DatastoreClient.py  README.md  RegistryClient.py  __init__.py  auth_client.py  client_helpers.py  datastore_client.py  handle_service.py  id_service.py  id_service_client.py  job_client.py  prov_client.py  registry_client.py  search_client.py  template_client.py
src/provenaclient/models/: __init__.py  datastore.py  general.py  registry.py
src/provenaclient/modules/: Datastore.py  ProvenaClient.py  README.md  __init__.py  auth.py  datastore.py  handle_service.py  id_service.py  job_service.py  link.py  module_helpers.py  prov.py  provena_client.py  registry.py  search.py  template_module.py
src/provenaclient/utils/: ApiClient.py  Auth.py  AuthManager.py  Config.py  README.md  TokenManager.py  async_job_helpers.py  auth_helpers.py  config.py  exceptions.py  helpers.py  httpClient.py  http_client.py  registry_endpoints.py  test.py  test_config.py
tests/: README.md  adhoc.py  conftest.py  integration_helpers.py  test_config.py  test_integration.py  test_provenaclient.py  test_unit.py  unit_helpers.py
(+73 files in other folders)
