[tool.poetry]
name = "provenaclient"
version = "0.21.0"
description = "A client library for interfacing with a Provena instance."
authors = ["RRAP <rrapisdev@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
pydantic = "<2.0"
python-jose = "<3.3.0"
provena-interfaces = "^2.9.1"
boto3 = "1.27.1"
cloudpathlib = { extras = ["s3"], version = "0.15.1" }
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
mypy = "<1.9.0"
pytest = "<8.1.1"
pytest-httpx = "<=0.30.0"
pytest-asyncio = "<=0.23.7"
python-semantic-release = "<9.4.0"
pytest-cov = "<5.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "<2.0.0"
types-requests="*"
python-dotenv = "^1.0.1"
ghp-import = "2.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_variable = [
    "src/provenaclient/__init__.py:__version__"
]                                                   # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry install && poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = true 
remove_dist = false
patch_without_tag = true
commit_version_number = true
patch_tag = ["fix", "perf"]
ignore_tags = ["chore", "docs", "style", "refactor", "test"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
